# osm-flex

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
doc/: 0_basic_usage.ipynb  1_clipping_shapes.ipynb  2_simplifications.ipynb  conf.py  education_ch.jp2  environment.yml  forest_ch.jp2  index.rst  requirements.in  requirements.txt
src/osm-flex/: __init__.py  clip.py  config.py  constants.py  download.py  extract.py
src/osm_flex/: __init__.py  clip.py  config.py  download.py  extract.py  osmconf.ini  simplify.py
src/osm_flex/.ipynb_checkpoints/: 0_basic_usage-checkpoint.ipynb  1_clipping_shapes-checkpoint.ipynb
src/osm_flex/tests/: test_clip.py  test_download.py  test_extract.py
src/osm_flex/tests/data/: test.osm.pbf
tests/: test_clip.py  test_download.py  test_extract.py  test_simplify.py
