"""
Set up project
"""

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-flex'"
version = "0.1.0"
maintainers = [
  { name="Elco Koks", email="elco.koks@vu.nl" },
]
description = "Python package for flexible data extraction from OpenStreetMap"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
license = {text = "GPL-3.0"}
keywords = ["OpenStreetMap"]
dependencies = [
  'cartopy',
  'geopandas',
  'numpy',
  'shapely>=2.0',
  'pandas',
  'tqdm',
]

[tool.setuptools.package-data]
"*" = ["*.ini"]

[project.optional-dependencies]
tests = ["pytest"]
docs = ["jupyter"]

[project.urls]
"Repository" = "https://github.com/ElcoK/osm-flex"
"Bug Tracker" = "https://github.com/ElcoK/osm-flex/issues"
